# Rhythms

./: .gitignore  CMakeLists.txt  README.md
include/: global_types.h
linear_algebra/: CMakeLists.txt
linear_algebra/include/: mx_utils.h
linear_algebra/src/: mx_utils.c
